--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "type": "git",
     "url": "https://github.com/refactorau/screenshot-cli.git"
   },
-  "author": "RefactorAU",
+  "author": "Refactor Pty Ltd",
+  "license": "MIT",
   "bin": {
     "screenshot-cli": "./bin/screenshot-cli.js"
   },
@@ -32,7 +33,8 @@
   "files": [
     "dist/**/*",
     "bin/**/*",
-    "README.md"
+    "README.md",
+    "LICENSE"
   ],
   "dependencies": {
     "chalk": "^5.3.0",
