feat(dev): add prettier code formatting and VS Code configuration
- Add Prettier configuration with consistent formatting rules
- Configure VS Code settings for format-on-save and import organization
- Add VS Code extension recommendations for optimal development experience
- Update README with code formatting documentation and development workflow
- Apply consistent formatting to all TypeScript source files
- Add format script to package.json for manual formatting

Development improvements:
- 2-space indentation, single quotes, 120-character line width
- Automatic formatting on save in VS Code
- Clear contribution guidelines with formatting requirements
- Professional development standards and tooling

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "dev": "ts-node src/index.ts",
     "capture": "node dist/index.js capture",
     "generate": "node dist/index.js generate",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "format": "prettier --write \"**/*.{js,ts,json,md}\""
   },
   "files": [
     "dist/**/*",
@@ -48,6 +49,7 @@
     "@types/inquirer": "^9.0.0",
     "@types/node": "^20.0.0",
     "@types/pdfkit": "^0.14.0",
+    "prettier": "^3.6.2",
     "ts-node": "^10.9.0",
     "typescript": "^5.0.0"
   },
