feat: add comprehensive image comparison system with real-time analysis
- Add ImageComparator class with pixelmatch-based comparison engine
- Implement real-time image comparison during before/after capture phase
- Add change level classification (none/minimal/minor/moderate/major/extreme)
- Create dedicated 'compare' command for post-capture comparison analysis
- Add persistent comparison data storage in JSONC files with metadata
- Enhance PDF reports with comparison badges, statistics cards, and change-level sorting
- Improve PDF layout with automatic 2/3-column diff view based on content
- Fix HTML report comparison data display bug in data file loading
- Add comprehensive comparison options (threshold, min-change, skip-diff-images, ignore-antialiasing)
- Implement intelligent diff image generation for major/moderate changes regardless of threshold
- Add dimension mismatch handling for screenshots with different sizes
- Update package.json to v1.1.0 with new compare script
- Update README with comprehensive documentation for new comparison features

BREAKING CHANGE: None - all changes are additive and backward compatible

This major feature addition transforms the CLI from a simple screenshot tool
into a comprehensive visual regression testing solution with persistent data
storage and advanced comparison analytics.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screenshot-cli",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "CLI tool for taking website screenshots with before/after comparison and HTML/PDF report generation",
   "keywords": [
     "screenshot",
@@ -27,6 +27,7 @@
     "build": "tsc",
     "dev": "ts-node src/index.ts",
     "capture": "node dist/index.js capture",
+    "compare": "node dist/index.js compare",
     "generate": "node dist/index.js generate",
     "clean": "rm -rf dist",
     "format": "prettier --write \"**/*.{js,ts,json,md}\""
@@ -43,12 +44,15 @@
     "inquirer": "^9.2.0",
     "ora": "^7.0.1",
     "pdfkit": "^0.17.1",
-    "playwright": "^1.40.0"
+    "pixelmatch": "^7.1.0",
+    "playwright": "^1.40.0",
+    "pngjs": "^7.0.0"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.0",
     "@types/node": "^20.0.0",
     "@types/pdfkit": "^0.14.0",
+    "@types/pngjs": "^6.0.5",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.0",
     "typescript": "^5.0.0"
